@@ -653,8 +653,10 @@ namespace Mono.Cecil {
 			} else
 				et = GetCorrespondingType (type.FullName);
 
-			if (et == ElementType.Object && hc.Constant != null)
-				et = GetCorrespondingType (hc.Constant.GetType ().FullName);
+			if (et == ElementType.Object)
+				et = hc.Constant == null ?
+					ElementType.Class :
+					GetCorrespondingType (hc.Constant.GetType ().FullName);
 
 			ConstantRow cRow = m_rowWriter.CreateConstantRow (
 				et,
